# lzCommonLibrary

./: .gitignore  CMakeLists.txt  Version.h.in  VersionLinux32.h.in  VersionLinux64.h.in  VersionWindows32.h.in  VersionWindows64.h.in
include/: Version.h  lzTypes.h
modules/: CMakeLists.txt
modules/Core/: CMakeLists.txt
modules/Core/inc/: core.h
modules/Core/src/: core.cpp
modules/KinectDriver/: CMakeLists.txt
modules/KinectDriver/inc/: ICapture.h  KinectDriver.h  LZ_KinectDriver.h  MMAPFile.h  kinectCapture.h
modules/KinectDriver/src/: KinectDriver.cpp  LZ_KinectDriver.cpp  MMAPFile.cpp  iCapture.cpp  kinectCapture.cpp
sample/: CMakeLists.txt
sample/example/: CMakeLists.txt
sample/example/src/: hello.cpp
sample/example/version/: Version.h
sample/test/: CMakeLists.txt
sample/test/src/: KinectDriverTest.cpp  testMain.cpp
test/: CMakeLists.txt
test/GTest/: CMakeLists1.txt
test/TestKinectDriver/: CMakeLists.txt
test/TestKinectDriver/src/: KinectDriverTest.cpp
version/: VersionWindows64.h.in
